# src/main/scala/com/wanari/tutelar/core/CoreApi.scala
@@ -5,7 +5,9 @@ import akka.http.scaladsl.model.StatusCodes
 import akka.http.scaladsl.server.Directives._
 import akka.http.scaladsl.server.Route
 import com.wanari.tutelar.Api
+import com.wanari.tutelar.core.AuthService.LongTermToken
 import com.wanari.tutelar.core.CoreApi._
+import com.wanari.tutelar.core.ProviderApi._
 import spray.json._
 
 import scala.concurrent.Future
@@ -34,13 +36,27 @@ class CoreApi(implicit val authService: AuthService[Future]) extends Api with Au
               }
             }
           }
-      }
+      } ~
+        path("refresh-token") {
+          post {
+            entity(as[RefreshTokenData]) { data =>
+              withTrace("RefreshToken_core") { implicit ctx =>
+                onSuccess(authService.refreshToken(data.refreshToken).value) {
+                  case Some(token) => complete(token)
+                  case _           => complete((StatusCodes.Unauthorized, ErrorData(ProviderApi.Errors.AUTHENTICATION_FAILED)))
+                }
+              }
+            }
+          }
+        }
     }
   }
 }
 
 object CoreApi {
+  case class RefreshTokenData(refreshToken: LongTermToken)
   case class UnlinkData(authType: String)
   import spray.json.DefaultJsonProtocol._
-  implicit val formatUnlinkData: RootJsonFormat[UnlinkData] = jsonFormat1(UnlinkData)
+  implicit val formatRefreshTokenData: RootJsonFormat[RefreshTokenData] = jsonFormat1(RefreshTokenData)
+  implicit val formatUnlinkData: RootJsonFormat[UnlinkData]             = jsonFormat1(UnlinkData)
 }
